# Prompt-Injection-Canary

./: .gitignore  README.md  prompts.yaml  pyproject.toml
prompt_injection_canary/: __init__.py  adapter.py  runner.py  scoring.py
tests/: __init__.py  test_adapter.py  test_runner.py  test_scoring.py
